runtime/pavex_macros/tests/config/fail/not_a_type.rs
use pavex_macros::config;

pub struct A;

impl A {
    #[config]
    pub fn new() -> Self {
        Self {}
    }
}

fn main() {}
